kubernetes/1-namespace-prod.yml
kind: Namespace
apiVersion: v1
metadata:
  name: production
  labels:
    name: prod
