kubernetes/namespace-dev.yml
kind: Namespace
apiVersion: v1
metadata:
  name: development
  labels:
    name: dev
