kubernetes/4-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: account-controller
  name: account-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-controller
  template:
    metadata:
      labels:
        app: account-controller
    spec:
      containers:
      - image: gitlab.balsen.loc:4901/balsen/kontospring:arm64v8
        imagePullPolicy: Always
        name: account-controller
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: regcred
