kubernetes/3-endpoint-database.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: account-db
subsets:
  - addresses:
      - ip: 192.168.17.5
    ports:
      - port: 5434
        name: postgres
