kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: konto-service
spec: 
  ports: 
    - port: 8080
  selector: 
      app: kontospring
