kubernetes/6-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /account
          pathType: Prefix
          backend:
            service:
              name: account-service
              port: 
                number: 8080
